LPS-32187 XSS vulnerability in Private Messaging Portlet in the user name fields

--- a/portlets/private-messaging-portlet/docroot/view_thread.jspf
+++ b/portlets/private-messaging-portlet/docroot/view_thread.jspf
@@ -62,6 +62,8 @@ String subject = PrivateMessagingUtil.getThreadSubject(mbThreadId);
 		if (!hasExistingRecipients) {
 			hasExistingRecipients = curUser.isActive();
 		}
+		
+		curUser = curUser.toEscapedModel();
 	%>
 
 		<c:choose>
@@ -150,6 +152,8 @@ String subject = PrivateMessagingUtil.getThreadSubject(mbThreadId);
 				curUser.setFirstName(mbMessage.getUserName());
 				curUser.setStatus(WorkflowConstants.STATUS_INACTIVE);
 			}
+
+			curUser = curUser.toEscapedModel();
 			%>
 
 			<div class="message">
@@ -162,20 +166,20 @@ String subject = PrivateMessagingUtil.getThreadSubject(mbThreadId);
 						</liferay-portlet:actionURL>
 
 						<span class="name">
-							<a class="profile-link" href="<%= publicPagesURL %>"><%= HtmlUtil.escape(curUser.getFullName()) %></a>
+							<a class="profile-link" href="<%= publicPagesURL %>"><%= curUser.getFullName() %></a>
 						</span>
 					</c:when>
 					<c:otherwise>
 						<c:choose>
 							<c:when test="<%= curUser.isActive() %>">
 								<span class="name">
-									<span class="profile-link"><%= HtmlUtil.escape(curUser.getFullName()) %></span>
+									<span class="profile-link"><%= curUser.getFullName() %></span>
 								</span>
 							</c:when>
 							<c:otherwise>
 								<span class="name">
 									<liferay-ui:icon-help message="deleted-user">
-										<span class="profile-link line-through"><%= HtmlUtil.escape(curUser.getFullName()) %></span>
+										<span class="profile-link line-through"><%= curUser.getFullName() %></span>
 									</liferay-ui:icon-help>
 								</span>
 							</c:otherwise>
