--- a/portlets/private-messaging-portlet/docroot/view_messages.jspf
+++ b/portlets/private-messaging-portlet/docroot/view_messages.jspf
@@ -94,15 +94,17 @@
 
 					for (int i = 0; i < users.size(); i++) {
 						User curUser = users.get(i);
+
+						curUser = curUser.toEscapedModel();
 					%>
 
 						<c:choose>
 							<c:when test="<%= curUser.isActive() %>">
-								<span class="author-sender"><%= HtmlUtil.escape(curUser.getFullName()) %></span>
+								<span class="author-sender"><%= curUser.getFullName() %></span>
 							</c:when>
 							<c:otherwise>
 								<liferay-ui:icon-help message="deleted-user">
-									<span class="author-sender line-through"><%= HtmlUtil.escape(curUser.getFullName()) %></span>
+									<span class="author-sender line-through"><%= curUser.getFullName() %></span>
 								</liferay-ui:icon-help>
 							</c:otherwise>
 						</c:choose>
